# divergent

./: Cargo.toml  test1.json  test2.json
src/: lib.rs  main.rs  pretty_print.rs
tests/: diffs.rs  visual.rs
tests/visual/: json1.txt
