[package]
name = "divergent"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
color-eyre = "0.5"
tracing-subscriber = "0.2"
tracing-error = "0.1.2"
tracing = "0.1.19"
