[package]
name = "divergent"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "div"
path = "src/main.rs"

[dependencies]
color-eyre = "0.5"
crossbeam = "0.7"
im = "15.0.0"
rayon = "1.4"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
tracing = "0.1.19"
tracing-error = "0.1.2"
tracing-subscriber = "0.2"
